@@ -1,4 +1,5 @@
 Development
+    Use correct DVD device name on OpenBSD
     Add include to gmtk_media_player.h
     Add sndio and rtunes audio outputs for OpenBSD
     Add verbose flag to volume display
